# serializer version: 1
# name: TestTR2XGenerator.test_generate
  tuple(
    list([
      '/userdata/roms/traider2/TR2X',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestTR2XGenerator.test_generate[config]
  '''
  {
    "is_fullscreen": true,
    "width": 1920,
    "height": 1080
  }
  '''
# ---
# name: TestTR2XGenerator.test_generate_ignores_copy_errors[exception0]
  tuple(
    list([
      '/userdata/roms/traider2/TR2X',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestTR2XGenerator.test_generate_ignores_copy_errors[exception0][config]
  '''
  {
    "is_fullscreen": true,
    "width": 1920,
    "height": 1080
  }
  '''
# ---
# name: TestTR2XGenerator.test_generate_ignores_copy_errors[exception1]
  tuple(
    list([
      '/userdata/roms/traider2/TR2X',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestTR2XGenerator.test_generate_ignores_copy_errors[exception1][config]
  '''
  {
    "is_fullscreen": true,
    "width": 1920,
    "height": 1080
  }
  '''
# ---
# name: TestTR2XGenerator.test_generate_ignores_json_errors
  tuple(
    list([
      '/userdata/roms/traider2/TR2X',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestTR2XGenerator.test_generate_ignores_json_errors[config]
  '''
  {
    "is_fullscreen": true,
    "width": 1920,
    "height": 1080
  }
  '''
# ---
# name: TestTR2XGenerator.test_generate_second_run
  tuple(
    list([
      '/userdata/roms/traider2/TR2X',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestTR2XGenerator.test_generate_second_run[config]
  '''
  {
    "foo": "bar",
    "is_fullscreen": true,
    "width": 1920,
    "height": 1080
  }
  '''
# ---
# name: TestTR2XGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'restore_state': 'KEY_F6',
      'save_state': 'KEY_F5',
    }),
    'name': 'tr2x',
  })
# ---
